# agent-rate-limiter-py

./: README.md  pyproject.toml
src/agent_rate_limiter/: __init__.py  core.py
tests/: test_agent_rate_limiter.py
